RESOLVED FIXED12280
select element not available by name through document.all (dropdown list not available on smarthome.com checkout)
https://bugs.webkit.org/show_bug.cgi?id=12280
Summary select element not available by name through document.all (dropdown list not ...
Patricia Warwick
Reported 2007-01-15 06:50:16 PST
I was attempting to checkout a purchase using this site: https://www.smarthome.com/ However, when I attempt to enter my address the dropdown list is missing. In Safari, the list is greyed out. In Firefox the list is enabled. I'm attaching screen shots for Firefox, Safari and Webkit. The page in question is https://www.smarthome.com/checkout.asp
Attachments
Screen shots in zipped format (224.27 KB, application/zip)
2007-01-15 06:52 PST, Patricia Warwick
no flags
Patch v1 (4.78 KB, patch)
2007-01-21 14:06 PST, David Kilzer (:ddkilzer)
darin: review+
Patricia Warwick
Comment 1 2007-01-15 06:52:08 PST
Created attachment 12454 [details] Screen shots in zipped format
David Kilzer (:ddkilzer)
Comment 2 2007-01-21 12:33:41 PST
Steps to reproduce: 1. Open Safari/WebKit. 2. Open URL: https://www.smarthome.com/ 3. Add any item to the shopping cart (click "Buy it Now" image for a product). 4. Click the "Checkout" image. 5. Enter a bogus email address (like bob@microsoft.com), then click the "Continue" image. 6. Click on the "State/Province/Region" dropdown list to select a state. Expected results: A list of states should be populated in the "State/Province/Region" dropdown list. Actual results: Nothing is populated in the "State/Province/Region" drowndown list. Notes: There are JavaScript errors when loading the page. This may turn out to be an evangelism bug. Confirmed on a locally-built debug build of WebKit r19011 with Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8N1037).
David Kilzer (:ddkilzer)
Comment 3 2007-01-21 13:40:43 PST
I have a patch to fix this.
David Kilzer (:ddkilzer)
Comment 4 2007-01-21 13:50:58 PST
Note that this page doesn't work in Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8N1037), either.
David Kilzer (:ddkilzer)
Comment 5 2007-01-21 14:06:18 PST
Created attachment 12589 [details] Patch v1 Proposed solution.
Darin Adler
Comment 6 2007-01-21 14:07:14 PST
Comment on attachment 12589 [details] Patch v1 r=me
David Kilzer (:ddkilzer)
Comment 7 2007-01-21 14:25:36 PST
Committed revision 19015.
David Kilzer (:ddkilzer)
Comment 8 2007-02-08 14:37:52 PST
*** Bug 10031 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.