LayoutTests:

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12280
          select element not available by name through document.all
          (dropdown list not available on smarthome.com checkout)

        * fast/dom/document-all-select-expected.txt: Added.
        * fast/dom/document-all-select.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12280
          select element not available by name through document.all
          (dropdown list not available on smarthome.com checkout)

        Test: fast/dom/document-all-select.html

        * html/HTMLCollection.cpp:
        (WebCore::HTMLCollection::checkForNameMatch):
        (WebCore::HTMLCollection::updateNameCache):



Canonical link: https://commits.webkit.org/15991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19015 268f45cc-cd09-0410-ab3c-d52691b4dbfc